tests/miniJava/neg/000678_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = else int [ 0 ] ; } }
